# empty-cpp-bazel

./: .bazelrc  .clangd  BUILD.bazel  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
example/: BUILD.bazel  example.cpp  example.hpp  example_test.cpp
