load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "example",
    srcs = ["example.cpp"],
    hdrs = ["example.hpp"],
)

cc_test(
    name = "example_test",
    timeout = "short",
    srcs = ["example_test.cpp"],
    deps = [
        ":example",
        "@boost_ut",
    ],
)

